--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/test
+spring.datasource.url = jdbc:mysql://localhost:3306/test?useSSL=false
 spring.datasource.username = root
-spring.datasource.password =  1q2w3e
+spring.datasource.password = 1q2w3e
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 #“≥√Ê»»º”‘ÿ
 spring.thymeleaf.cache = false
